[gd_scene load_steps=4 format=3 uid="uid://dr6w8rungysm1"]

[ext_resource type="Theme" uid="uid://bvc652bwjujtl" path="res://theme/main_ui.tres" id="1_3hicx"]
[ext_resource type="Script" path="res://menu/gallery/GalleryMenu.gd" id="1_vj1ai"]
[ext_resource type="Script" path="res://menu/CustomMenuButton.gd" id="3_ovs4m"]

[node name="GalleryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vj1ai")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 34.0
offset_right = 1027.0
offset_bottom = 585.0
mouse_filter = 1
theme = ExtResource("1_3hicx")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="NoEntryLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "You have no saved artifacts
Play in Relax or Struggle mode
to collect more"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Entries" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviousButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_3hicx")
text = "Previous"
script = ExtResource("3_ovs4m")

[node name="UnpackButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_3hicx")
text = "Unpack"
script = ExtResource("3_ovs4m")

[node name="NextButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_3hicx")
text = "Next"
script = ExtResource("3_ovs4m")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
offset_left = 971.0
offset_top = 51.0
offset_right = 1007.0
offset_bottom = 83.0
size_flags_horizontal = 3
theme = ExtResource("1_3hicx")
text = "X"
script = ExtResource("3_ovs4m")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/UnpackButton" to="." method="_on_unpack_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
